<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/emptyBackground"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="96dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:background="@color/colorPrimaryDark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="0dp"
        android:layout_height="98dp"
        android:layout_marginStart="1dp"
        android:layout_marginLeft="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginRight="1dp"
        android:background="@color/colorBackgroundLight"
        android:contentDescription="@string/logo_description"
        android:padding="10dp"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="@+id/emptyBackground"
        app:layout_constraintStart_toStartOf="@+id/emptyBackground"
        app:layout_constraintTop_toTopOf="@+id/emptyBackground"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/usernameText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:text="@string/username_text"
        android:textColor="@color/colorText1"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emptyBackground" />

    <EditText
        android:id="@+id/usernameInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="-3dp"
        android:layout_marginLeft="-3dp"
        android:layout_marginTop="8dp"
        android:autofillHints="username"
        android:background="@color/colorBackgroundLight"
        android:ems="10"
        android:hint="@string/username_input_hint_text"
        android:inputType="textPersonName"
        android:padding="15dp"
        android:text="@string/username_input_text"
        android:textColor="@color/colorText2"
        app:layout_constraintEnd_toEndOf="@+id/usernameText"
        app:layout_constraintStart_toStartOf="@+id/usernameText"
        app:layout_constraintTop_toBottomOf="@+id/usernameText" />

    <TextView
        android:id="@+id/passwordText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:text="@string/password_text"
        android:textColor="@color/colorText1"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usernameInput" />

    <EditText
        android:id="@+id/passwordInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="-3dp"
        android:layout_marginLeft="-3dp"
        android:layout_marginTop="8dp"
        android:autofillHints="username"
        android:background="@color/colorBackgroundLight"
        android:ems="10"
        android:hint="@string/password_input_hint_text"
        android:inputType="textPassword"
        android:padding="15dp"
        android:text="@string/password_input_text"
        android:textColor="@color/colorText2"
        app:layout_constraintEnd_toEndOf="@+id/passwordText"
        app:layout_constraintStart_toStartOf="@+id/passwordText"
        app:layout_constraintTop_toBottomOf="@+id/passwordText" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginLeft="64dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="64dp"
        android:layout_marginRight="64dp"
        android:background="@color/colorPrimary"
        android:text="@string/login_button_text"
        android:textColor="@color/colorBackground"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordInput" />

</androidx.constraintlayout.widget.ConstraintLayout>