<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".FormActivity">

    <TextView
        android:id="@+id/emptyBackground"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="164dp"
        android:background="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/emptyBackground2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="1dp"
        android:layout_marginLeft="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginRight="1dp"
        android:layout_marginBottom="1dp"
        android:background="@color/colorBackground"
        app:layout_constraintBottom_toBottomOf="@+id/emptyBackground"
        app:layout_constraintEnd_toEndOf="@+id/emptyBackground"
        app:layout_constraintStart_toStartOf="@+id/emptyBackground"
        app:layout_constraintTop_toTopOf="@+id/emptyBackground"
        app:layout_constraintVertical_bias="0.52" />

    <TextView
        android:id="@+id/nameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="19dp"
        android:layout_marginLeft="19dp"
        android:layout_marginTop="24dp"
        android:text="@string/name_text"
        android:textColor="@color/colorText1"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/emptyBackground2"
        app:layout_constraintTop_toTopOf="@+id/emptyBackground2" />

    <EditText
        android:id="@+id/nameInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:autofillHints="name"
        android:background="@color/colorBackgroundLight"
        android:ems="10"
        android:hint="@string/name_input_hint_text"
        android:inputType="textPersonName"
        android:padding="15dp"
        android:text="@string/name_input_text"
        android:textColor="@color/colorText2"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/emptyBackground2"
        app:layout_constraintStart_toStartOf="@+id/emptyBackground2"
        app:layout_constraintTop_toBottomOf="@+id/nameText" />

    <TextView
        android:id="@+id/ageText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/age_text"
        android:textColor="@color/colorText1"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/nameText"
        app:layout_constraintTop_toBottomOf="@+id/nameInput" />

    <EditText
        android:id="@+id/ageInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:autofillHints="age"
        android:background="@color/colorBackgroundLight"
        android:ems="10"
        android:hint="@string/age_input_hint_text"
        android:inputType="number"
        android:padding="15dp"
        android:text="@string/age_input_text"
        android:textColor="@color/colorText2"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/emptyBackground2"
        app:layout_constraintStart_toStartOf="@+id/emptyBackground2"
        app:layout_constraintTop_toBottomOf="@+id/ageText" />

    <TextView
        android:id="@+id/emptyBackground3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="48dp"
        android:background="@color/colorText2"
        app:layout_constraintBottom_toBottomOf="@+id/emptyBackground2"
        app:layout_constraintEnd_toEndOf="@+id/emptyBackground2"
        app:layout_constraintStart_toStartOf="@+id/emptyBackground2"
        app:layout_constraintTop_toBottomOf="@+id/ageInput" />

    <TextView
        android:id="@+id/emptyBackground4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="2dp"
        android:layout_marginLeft="2dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="2dp"
        android:layout_marginRight="2dp"
        android:layout_marginBottom="2dp"
        android:background="@color/colorBackground"
        app:layout_constraintBottom_toBottomOf="@+id/emptyBackground3"
        app:layout_constraintEnd_toEndOf="@+id/emptyBackground3"
        app:layout_constraintStart_toStartOf="@+id/emptyBackground3"
        app:layout_constraintTop_toTopOf="@+id/emptyBackground3" />

    <TextView
        android:id="@+id/cia1Text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:background="@color/colorBackgroundLight"
        android:paddingLeft="16dp"
        android:paddingTop="5dp"
        android:paddingRight="16dp"
        android:paddingBottom="5dp"
        android:text="@string/cia1_text"
        android:textColor="@color/colorText1"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="@+id/emptyBackground4"
        app:layout_constraintStart_toStartOf="@+id/emptyBackground4"
        app:layout_constraintTop_toTopOf="@+id/emptyBackground4" />

    <EditText
        android:id="@+id/cia1Input"
        android:layout_width="50dp"
        android:layout_height="0dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="68dp"
        android:layout_marginRight="68dp"
        android:layout_marginBottom="6dp"
        android:autofillHints="marks1"
        android:background="@color/colorBackground"
        android:ems="10"
        android:gravity="center_horizontal|center_vertical"
        android:hint="@string/cia1_marks_hint_text"
        android:inputType="number"
        android:text="@string/no_marks"
        android:textColor="@color/colorAccent"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="@+id/cia1Text"
        app:layout_constraintEnd_toEndOf="@+id/cia1Text"
        app:layout_constraintTop_toTopOf="@+id/cia1Text" />

    <TextView
        android:id="@+id/cia1Caption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginLeft="6dp"
        android:text="@string/total_marks"
        android:textColor="@color/colorAccent"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="@+id/cia1Input"
        app:layout_constraintStart_toEndOf="@+id/cia1Input"
        app:layout_constraintTop_toTopOf="@+id/cia1Input" />

    <TextView
        android:id="@+id/cia2Text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@color/colorBackgroundLight"
        android:paddingLeft="16dp"
        android:paddingTop="5dp"
        android:paddingRight="16dp"
        android:paddingBottom="5dp"
        android:text="@string/cia2_text"
        android:textColor="@color/colorText1"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="@+id/cia1Text"
        app:layout_constraintStart_toStartOf="@+id/cia1Text"
        app:layout_constraintTop_toBottomOf="@+id/cia1Text" />

    <EditText
        android:id="@+id/cia2Input"
        android:layout_width="50dp"
        android:layout_height="0dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="68dp"
        android:layout_marginRight="68dp"
        android:layout_marginBottom="6dp"
        android:autofillHints="marks2"
        android:background="@color/colorBackground"
        android:ems="10"
        android:gravity="center_horizontal|center_vertical"
        android:hint="@string/cia2_marks_hint_text"
        android:inputType="number"
        android:text="@string/no_marks"
        android:textColor="@color/colorAccent"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="@+id/cia2Text"
        app:layout_constraintEnd_toEndOf="@+id/cia2Text"
        app:layout_constraintTop_toTopOf="@+id/cia2Text" />

    <TextView
        android:id="@+id/cia2Caption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginLeft="6dp"
        android:text="@string/total_marks"
        android:textColor="@color/colorAccent"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="@+id/cia2Input"
        app:layout_constraintStart_toEndOf="@+id/cia2Input"
        app:layout_constraintTop_toTopOf="@+id/cia2Input" />

    <TextView
        android:id="@+id/cia3Text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@color/colorBackgroundLight"
        android:paddingLeft="16dp"
        android:paddingTop="5dp"
        android:paddingRight="16dp"
        android:paddingBottom="5dp"
        android:text="@string/cia3_text"
        android:textColor="@color/colorText1"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="@+id/cia2Text"
        app:layout_constraintStart_toStartOf="@+id/cia2Text"
        app:layout_constraintTop_toBottomOf="@+id/cia2Text" />

    <EditText
        android:id="@+id/cia3Input"
        android:layout_width="50dp"
        android:layout_height="0dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="68dp"
        android:layout_marginRight="68dp"
        android:layout_marginBottom="6dp"
        android:autofillHints="marks3"
        android:background="@color/colorBackground"
        android:ems="10"
        android:gravity="center_horizontal|center_vertical"
        android:hint="@string/cia3_marks_hint_text"
        android:inputType="number"
        android:text="@string/no_marks"
        android:textColor="@color/colorAccent"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="@+id/cia3Text"
        app:layout_constraintEnd_toEndOf="@+id/cia3Text"
        app:layout_constraintTop_toTopOf="@+id/cia3Text" />

    <TextView
        android:id="@+id/cia3Caption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginLeft="6dp"
        android:text="@string/total_marks"
        android:textColor="@color/colorAccent"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="@+id/cia3Input"
        app:layout_constraintStart_toEndOf="@+id/cia3Input"
        app:layout_constraintTop_toTopOf="@+id/cia3Input" />

    <Button
        android:id="@+id/calculateButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginLeft="64dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="64dp"
        android:layout_marginRight="64dp"
        android:background="@color/colorPrimary"
        android:padding="12dp"
        android:text="@string/calculate_button_text"
        android:textColor="@color/colorBackground"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emptyBackground" />

</androidx.constraintlayout.widget.ConstraintLayout>